--- a/frontend/src/components/FoodDisplay/FoodDisplay.css
+++ b/frontend/src/components/FoodDisplay/FoodDisplay.css
@@ -12,3 +12,17 @@
     gap: 30px;
     row-gap: 50px;
 }
+.food-display-item-wrapper{
+    opacity: 0;
+    animation: slideUpFade 0.6s ease-out forwards;
+}
+@keyframes slideUpFade{
+    0%{
+        opacity: 0;
+        transform: translateY(40px) scale(0.95);
+    }
+    100%{
+        opacity: 1;
+        transform: translateY(0) scale(1);
+    }
+}
